[package]
name = "linxv2"
version = "0.1.0"
authors = ["Louis <louis.blenner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = "*"
async-std = {version = "1.8.0", features = ["unstable"]}
futures = "0.3"